--- a/os/.vscode/settings.json
+++ b/os/.vscode/settings.json
@@ -44,7 +44,11 @@
     "limits": "cpp",
     "numbers": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "stack": "cpp",
+    "optional": "cpp",
+    "fstream": "cpp",
+    "sstream": "cpp"
   },
   "python.pythonPath": "C:\\Users\\hp\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
