--- a/os/.vscode/tasks.json
+++ b/os/.vscode/tasks.json
@@ -2,29 +2,19 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Node JS",
-      "command": "node",
-      "type": "shell",
-      "args": ["${file}", "<", "input.txt", ">", "output.txt"],
-      "problemMatcher": [],
-      "group": {
-        "kind": "build"
-        // "isDefault": true
-      }
-    },
-    {
-      "label": "C++ build and run",
+      "label": "C++ build",
       "command": "g++",
       "type": "shell",
-      // "args": ["${file}", "&&", "\"${fileDirname}\\a.exe\""],
       "args": [
         "-g",
         "\"${file}\"",
         "-o",
         "\"${fileDirname}\\a.exe\"",
-        "&&",
-        "\"${fileDirname}\\a.exe\""
+        "-std=c++17"
       ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "problemMatcher": ["$msCompile", "$gcc"],
       "group": {
         "kind": "build",
@@ -36,7 +26,8 @@
         "focus": true,
         "panel": "shared",
         "showReuseMessage": false,
-        "clear": true
+        "clear": true,
+        "close": true
       }
     }
   ]
