--- a/graphics/.vscode/tasks.json
+++ b/graphics/.vscode/tasks.json
@@ -2,22 +2,38 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "C++ Build",
-      "command": "g++ -g -Wall -fdiagnostics-color=always -std=c++11 src/${fileBasename} -o build/${fileBasenameNoExtension}.exe src/glad.c -lglew32 -lopengl32 -lfreeglut -lglu32 -lglfw3 -lopengl32 -luser32 -lGdi32 -lShell32",
+      "label": "C++ build",
+      "command": "g++",
       "type": "shell",
+      "args": [
+        "-g",
+        "\"${file}\"",
+        "-o",
+        "\"${fileDirname}\\a.exe\"",
+        "-std=c++17",
+        "-lbgi",
+        "-lgdi32",
+        "-lcomdlg32",
+        "-luuid",
+        "-loleaut32",
+        "-lole32"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
       "problemMatcher": ["$msCompile", "$gcc"],
       "group": {
         "kind": "build",
         "isDefault": true
       },
-
       "presentation": {
         "echo": false,
         "reveal": "always",
         "focus": true,
         "panel": "shared",
         "showReuseMessage": false,
-        "clear": true
+        "clear": true,
+        "close": true
       }
     }
   ]
