--- a/opengl/.vscode/settings.json
+++ b/opengl/.vscode/settings.json
@@ -1,22 +1,12 @@
 {
   "files.associations": {
     "iostream": "cpp",
-    "regex": "cpp",
-    "ostream": "cpp",
-    "random": "cpp",
-    "new": "cpp",
-    "stdexcept": "cpp",
     "array": "cpp",
-    "string": "cpp",
-    "string_view": "cpp",
     "atomic": "cpp",
-    "bit": "cpp",
     "*.tcc": "cpp",
     "cctype": "cpp",
     "clocale": "cpp",
     "cmath": "cpp",
-    "compare": "cpp",
-    "concepts": "cpp",
     "cstdarg": "cpp",
     "cstddef": "cpp",
     "cstdint": "cpp",
@@ -29,26 +19,26 @@
     "vector": "cpp",
     "exception": "cpp",
     "algorithm": "cpp",
-    "functional": "cpp",
-    "iterator": "cpp",
     "memory": "cpp",
     "memory_resource": "cpp",
-    "numeric": "cpp",
+    "optional": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
     "system_error": "cpp",
     "tuple": "cpp",
     "type_traits": "cpp",
     "utility": "cpp",
+    "fstream": "cpp",
     "initializer_list": "cpp",
     "iosfwd": "cpp",
     "istream": "cpp",
     "limits": "cpp",
-    "numbers": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp",
-    "stack": "cpp",
-    "optional": "cpp",
-    "fstream": "cpp",
-    "sstream": "cpp"
-  },
-  "python.pythonPath": "C:\\Users\\hp\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
+    "cinttypes": "cpp",
+    "typeinfo": "cpp"
+  }
 }
