--- a/ds/.vscode/settings.json
+++ b/ds/.vscode/settings.json
@@ -49,7 +49,8 @@
     "optional": "cpp",
     "fstream": "cpp",
     "sstream": "cpp",
-    "bitset": "cpp"
+    "bitset": "cpp",
+    "list": "cpp"
   },
   "python.pythonPath": "C:\\Users\\hp\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
